--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -20,7 +20,16 @@ A new  preventative aides drug (triUmpsal) is under test in clinical trials. Con
 # Methods
 
 <!--Decide on your methods:  use "variable analysis" or other appropriate descriptors.  Make sure to choose at least one graphical method and at least one numerical method. Discuss what data manipulations may be needed for example subsetting or other binning procedures and what sort of graphical displays and inferential tools will be used!-->
-
+The variables we use are:
+treatment - categorical
+DrugUser - categorical
+Infected - categorical
+Infected depends on treatment among drug users.
+We get just the drug users from the population. 
+```{r}
+drugUserData = select(triUmp, treatment, DrugUser, infected)
+drugUserData = filter(drugUserData, DrugUser=='yes')
+```
 # Results
 
 <!--Divide this section into two sub-sections:  One for your descriptive  results and one for your inferential results.!-->
@@ -28,7 +37,11 @@ A new  preventative aides drug (triUmpsal) is under test in clinical trials. Con
 ## Descriptive Results
 
 ### Graphical Descriptive Results
+```{r}
+barchartGC(~infected + treatment,data=drugUserData)
+barchartGC(~infected + treatment,data=drugUserData, type="percent")
 
+```
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question. Bottom line is to explain the features of the graph that are relevant to conforming or departing to what is expected by your null hypothesis !-->
 
 ### Numerical Descriptive Results
